# template-python-langgraph

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  README.md  docker-compose.langfuse.yml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
output/: graph_X_basic_Reflection_Agent.md
template_langgraph_project/: settings.py
template_langgraph_project/examples/: simple-langgraph-example.py
template_langgraph_project/examples/Basic Reflection Agent/: basic-reflection.py
template_langgraph_project/examples/Reflection Agent/: reflection-agent.md
template_langgraph_project/examples/Reflexion_Research_Agent/: chains.py  main.py  schemas.py  tool_executory.py
template_langgraph_project/examples/X_basic_Reflection_Agent/: chains.py  main.py
template_langgraph_project/helpers/: graph_visualizer.py  lang_fuse.py  llm.py  test_llm.py
